k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp
  labels:
    app: go-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: narsss1234/go-web-app:latest
        ports:
        - containerPort: 8080
