k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webapp
spec:
  ingressClassName: nginx
  rules:
  - host: "go-webapp.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-webapp
            port:
              number: 80
